mockiato_codegen/tests/ui/malformed-name-attr.stderr
error: #[mockable(name = "...") expects a string literal
 --> $DIR/malformed-name-attr.rs:4:12
  |
4 | #[mockable(name = 1)]
  |            ^^^^
  |
  = help: Example usage: #[mockable(name = "FooMock")]

error: #[mockable(name = "...") expects a string literal
 --> $DIR/malformed-name-attr.rs:7:12
  |
7 | #[mockable(name(FooMock))]
  |            ^^^^
  |
  = help: Example usage: #[mockable(name = "FooMock")]

error: #[mockable(name = "...") expects a string literal
  --> $DIR/malformed-name-attr.rs:10:12
   |
10 | #[mockable(name)]
   |            ^^^^
   |
   = help: Example usage: #[mockable(name = "FooMock")]

error: aborting due to 3 previous errors

